feat: add basic endpoints on product service + some fixes